--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
+  <script type="text/javascript">
+    <% if logged_in? %>
+      window.currentUser =
+      <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
+    <% end %>
+  </script>
 
   <body>
     <%= yield %>
