--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+html, body, div, span, h1, h2, h3, h4, h5,
+h6, p, blockquote, pre, b, u, i, ol, ul, li,
+form, label, embed, footer, header, nav, section {
+ 	margin: 0;
+ 	padding: 0;
+ 	border: 0;
+ 	font: inherit;
+ 	vertical-align: baseline;
+ }
+
+footer, header, menu, nav, section {
+ 	display: block;
+}
+
+body {
+ 	line-height: 1;
+}
+
+ol, ul {
+ 	list-style: none;
+}
