--- a/app/assets/stylesheets/component_styles/button_styles.scss
+++ b/app/assets/stylesheets/component_styles/button_styles.scss
@@ -1,5 +1,9 @@
+// Colors
+$white: #FFFFFF;
+$light-gray: #E6E6E6;
 $blue: #3897f0;
 
+// Classes
 .button {
   padding: 0 8px;
   font-family: 'Quicksand', sans-serif;
