Rename styling for login screen

--- a/app/assets/stylesheets/login_view/login-view-styles.scss
+++ b/app/assets/stylesheets/login_view/login-view-styles.scss
@@ -4,11 +4,11 @@ $light-gray: #E6E6E6;
 $blue: #3897f0;
 
 // Classes
-.login-view-content {
+.login-view-container {
   display: flex;
 }
 
-.login-view-form-content {
+.login-view-content {
   display: flex;
   align-items: center;
   justify-content: center;
