--- a/app/assets/stylesheets/components/form-styles.scss
+++ b/app/assets/stylesheets/components/form-styles.scss
@@ -8,14 +8,16 @@ $blue: #3897f0;
 
 // Classes
 .login-form, .signup-form {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .form-input {
-  width: 268px;
+  width: 258px;
   padding: 9px 0 7px 8px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 18px;
   background-color: $off-white;
   border: 1px solid $light-gray-1;
@@ -24,4 +26,9 @@ $blue: #3897f0;
 .form-input:focus {
   outline: none;
   border: 1px solid $light-gray-3;
+}
+
+.signup-input {
+  padding: 0;
+  margin-bottom: 0px;
 }
