--- a/app/assets/stylesheets/components/button_styles.scss
+++ b/app/assets/stylesheets/components/button_styles.scss
@@ -15,6 +15,7 @@ $blue: #3897f0;
   font-size: 14px;
   font-weight: 600;
   line-height: 26px;
-  margin: 8px 40px;
   border-radius: 3px;
+  outline: none;
+  cursor: pointer;
 }
