Create generic logo component and refactor styling

--- a/app/assets/stylesheets/logged-out-views/signup_view/signup-view-styles.scss
+++ b/app/assets/stylesheets/logged-out-views/signup_view/signup-view-styles.scss
@@ -27,11 +27,8 @@ $blue: #3897f0;
   background-color: #FFFFFF;
 }
 
-.logo-text {
-  margin: 22px auto 20px;
-  font-size: 32px;
-  font-family: 'Pacifico', cursive;
-  text-align: center;
+.signup-view-main-content .logo-container {
+  margin: 24px auto 28px;
 }
 
 .or-bar {
