Adjust logo size and padding properties on sign-up view

--- a/app/assets/stylesheets/logged-out-views/signup_view/signup-view-styles.scss
+++ b/app/assets/stylesheets/logged-out-views/signup_view/signup-view-styles.scss
@@ -21,8 +21,8 @@ $blue: #3897f0;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 350px;
-  padding: 10px 10px 42px;
+  width: 348px;
+  padding: 10px 0 42px;
   border: 1px solid $light-gray-2;
   background-color: #FFFFFF;
 }
