Add render functions to signup and create footer with link to signup page

--- a/app/assets/stylesheets/logged-out-views/login_view/login-view-styles.scss
+++ b/app/assets/stylesheets/logged-out-views/login_view/login-view-styles.scss
@@ -7,11 +7,11 @@ $light-gray-3: #DBDBDB;
 $blue: #3897f0;
 
 // Classes
-.login-view-container {
+.login-view-content {
   display: flex;
 }
 
-.login-view-content {
+.login-view-main-content {
   display: flex;
   align-items: center;
   justify-content: center;
