--- a/app/assets/stylesheets/components/form-styles.scss
+++ b/app/assets/stylesheets/components/form-styles.scss
@@ -4,6 +4,8 @@ $off-white: #FAFAFA;
 $light-gray-1: #EFEFEF;
 $light-gray-2: #E6E6E6;
 $light-gray-3: #DBDBDB;
+$black1: #262626;
+
 $blue: #3897f0;
 
 // Classes
