--- a/app/assets/stylesheets/logged-out-views/components.scss
+++ b/app/assets/stylesheets/logged-out-views/components.scss
@@ -10,6 +10,11 @@ $black: #262626;
 
 $blue: #3897f0;
 
+// Classes
+.logo-container {
+  margin: 24px auto 28px;
+}
+
 .toggle-footer {
   display: flex;
   justify-content: center;
