Add sticky npm packages to react and add conditional styling for header

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,6 +1,6 @@
 $off-white: #FAFAFA;
 
-html {
+body {
   background-color: $off-white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
