--- a/app/assets/stylesheets/components/header-styles.scss
+++ b/app/assets/stylesheets/components/header-styles.scss
@@ -12,6 +12,7 @@ $blue: #3897f0;
 
 .main-header-container {
   background-color: $white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .main-header-content {
