--- a/app/assets/stylesheets/components/logo-styles.scss
+++ b/app/assets/stylesheets/components/logo-styles.scss
@@ -13,5 +13,12 @@ $blue: #3897f0;
 .logo-text {
   font-size: 36px;
   font-family: 'Pacifico', cursive;
-  text-align: center;
+}
+
+.header-logo-text {
+  font-size: 24px;
+  line-height: 32px;
+  font-family: 'Pacifico', cursive;
+  padding-left: 18px;
+  border-left: 1px solid $gray;
 }
