Adjust background properties and add filler text

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -1,17 +1,15 @@
 $off-white: #FAFAFA;
 
-body {
-  background-color: $off-white;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 .main-view {
   display: flex;
   align-items: stretch;
   justify-content: center;
+  background: $off-white;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
 }
 
 .logged-in-view {
