--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -3,7 +3,6 @@ $off-white: #FAFAFA;
 .main-view {
   display: flex;
   align-items: stretch;
-  justify-content: center;
   background: $off-white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -12,7 +11,7 @@ $off-white: #FAFAFA;
   height: 100%;
 
   // Add conditions for logged in/logged out states or add to components
-  padding: 80px;
+  padding: 80px 0px;
 }
 
 .logged-in-view {
