--- a/app/assets/stylesheets/components/form-styles.scss
+++ b/app/assets/stylesheets/components/form-styles.scss
@@ -43,3 +43,8 @@ $blue: #3897f0;
 .signup-form-button, .login-form-button {
   margin-top: 10px;
 }
+
+.filled-password {
+  letter-spacing: 1.5px;
+  font-size: 16px;
+}
