Add basic structure for post list item component and add colors to home view style sheet

--- a/app/assets/stylesheets/logged_in_views/home_feed_view/home-feed-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/home_feed_view/home-feed-view-styles.scss
@@ -1,3 +1,16 @@
+// Colors
+$white: #FFFFFF;
+$off-white: #FAFAFA;
+$light-gray-1: #EFEFEF;
+$light-gray-2: #E6E6E6;
+$light-gray-3: #DBDBDB;
+$light-gray-4: #C7C7C7;
+$gray: #999999;
+$black: #262626;
+
+$blue: #3897f0;
+
+// Classes
 .post-photo-grid-item {
   width: 120px;
   height: 120px;
