--- a/app/assets/stylesheets/components/form-styles.scss
+++ b/app/assets/stylesheets/components/form-styles.scss
@@ -8,6 +8,8 @@ $black1: #262626;
 
 $blue: #3897f0;
 
+$red: #ED4956;
+
 // Classes
 .login-form, .signup-form {
   display: flex;
@@ -47,4 +49,11 @@ $blue: #3897f0;
 .filled-password {
   letter-spacing: 1.5px;
   font-size: 16px;
+}
+
+.error-message-text {
+  color: $red;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
 }
