--- a/app/assets/stylesheets/logged_out_views/login_view/login-view-styles.scss
+++ b/app/assets/stylesheets/logged_out_views/login_view/login-view-styles.scss
@@ -13,6 +13,8 @@ $blue: #3897f0;
 // Classes
 .login-view-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
 }
 
