--- a/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
+++ b/app/assets/stylesheets/logged_out_views/signup_view/signup-view-styles.scss
@@ -24,6 +24,7 @@ $blue: #3897f0;
   align-items: center;
   justify-content: center;
   width: 348px;
+  margin: auto 0;
   padding: 10px 0 42px;
   border: 1px solid $light-gray-2;
   background-color: #FFFFFF;
