Create basic skeleton for Post List Item component

--- a/app/assets/stylesheets/logged_in_views/home_feed_view/home-feed-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/home_feed_view/home-feed-view-styles.scss
@@ -11,7 +11,18 @@ $black: #262626;
 $blue: #3897f0;
 
 // Classes
-.post-photo-grid-item {
-  width: 120px;
-  height: 120px;
+.post-list-item {
+  display: flex;
+  flex-direction: row;
+  max-width: 600px;
+  height: auto;
+  background-color: #EFEFEF;
+}
+
+.post-author-header {
+  height: 60px;
+}
+
+.post-photo {
+  max-height: 600px;
 }
