Add Image resizing package and render basic styles on post list view

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2,6 +2,7 @@ $off-white: #FAFAFA;
 
 .main-view {
   display: flex;
+  flex-direction: column;
   align-items: stretch;
   justify-content: stretch;
   background: $off-white;
@@ -14,10 +15,13 @@ $off-white: #FAFAFA;
 
 .logged-in-view {
   display: flex;
-  align-items: stretch;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
+  margin: 0 auto;
   max-width: 935px;
-  padding-top: 60px;
+  width: 100%;
+  padding-top: 80px;
 }
 
 .logged-out-view {
