--- a/app/assets/stylesheets/components/header-styles.scss
+++ b/app/assets/stylesheets/components/header-styles.scss
@@ -5,6 +5,7 @@ $light-gray-1: #EFEFEF;
 $light-gray-2: #E6E6E6;
 $light-gray-3: #DBDBDB;
 $light-gray-4: #C7C7C7;
+$gray: #999999;
 $black1: #262626;
 $black2: #003569;
 
@@ -27,4 +28,22 @@ $blue: #3897f0;
   margin: 0 auto;
   padding: 26px 40px;
   max-width: 1010px;
+}
+
+// TODO: Refactor these once search is implemented.
+.header-search-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 7px;
+  min-width: 125px;
+  width: 215px;
+  border: 1px solid $light-gray-3;
+  border-radius: 3px;
+  background-color: $off-white;
+}
+
+.search-placeholder {
+  font-size: 14px;
+  color: $gray;
 }
