--- a/app/assets/stylesheets/logged_out_views/login_view/login-view-styles.scss
+++ b/app/assets/stylesheets/logged_out_views/login_view/login-view-styles.scss
@@ -27,6 +27,11 @@ $blue: #3897f0;
   padding: 10px 0 20px;
   border: 1px solid $light-gray-2;
   background-color: #FFFFFF;
+
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .instagram-link {
@@ -37,4 +42,20 @@ $blue: #3897f0;
   text-align: center;
   text-decoration: none;
   color: $black2;
+}
+
+// Animation
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
