Add logic for rendering empty profile pictures and add urls for seed data

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -32,6 +32,10 @@ $blue: #3897f0;
 }
 
 .post-header-author-text {
+  margin-left: 16px;
+}
+
+.post-header-author-text {
   font-weight: 600;
   font-size: 15px;
   margin-right: 5px;
