--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -16,9 +16,14 @@ $blue: #3897f0;
   flex-direction: column;
   max-width: 600px;
   height: auto;
+  margin-bottom: 60px;
   background-color: $white;
   border: 1px solid $light-gray-2;
-  border-radius:A 3px;
+  border-radius: 3px;
+}
+
+.post-list-item:last-of-type {
+  margin-bottom: 0px;
 }
 
 .post-author-header {
@@ -38,7 +43,7 @@ $blue: #3897f0;
   margin-left: 10px;
 }
 
-.post-header-author-text {
+.post-item-author-text {
   font-weight: 600;
   font-size: 15px;
   margin-right: 5px;
@@ -55,7 +60,7 @@ $blue: #3897f0;
   display: flex;
 }
 
-.post-button {
+.post-action-button {
   background-color: $gray;
   width: 15px;
   length: 15px;
