Add logic for handling nested state in new post form and add hidden form state

--- a/app/assets/stylesheets/components/header-styles.scss
+++ b/app/assets/stylesheets/components/header-styles.scss
@@ -48,6 +48,10 @@ $blue: #3897f0;
   color: $gray;
 }
 
+.upload-photo-button {
+  width: 150px;
+}
+
 // TODO: Remove once logout button is no longer needed.
 .temporary-logout-button {
   width: 150px;
