--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-upload-view-styles.scss
@@ -26,6 +26,7 @@ $blue: #3897f0;
 .upload-photo-form-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 500px;
   margin: auto;
   padding: 20px;
