--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,13 @@
 
 html, body, div, span, h1, h2, h3, h4, h5, input,
 h6, p, blockquote, pre, b, u, i, ol, ul, li,
-form, label, embed, footer, header, nav, section {
+form, label, embed, footer, header, button, nav, section {
  	margin: 0;
  	padding: 0;
  	border: 0;
  	font: inherit;
  	vertical-align: baseline;
+  background: none;
   font-family: 'Quicksand', sans-serif;
  }
 
