Create container for actions bar

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -61,7 +61,8 @@ $blue: #3897f0;
   height: 40px;
 }
 
-.post-action-button {
+.post-action-button:focus {
+  outline: none;
 }
 
 .post-like-button {
