Adjust styling on comment list ite

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -101,6 +101,9 @@ $blue: #3897f0;
 }
 
 // Comments ==================================================
-.comment-list-item-content {
 
+.post-comment-text {
+  font-weight: 400;
+  font-size: 15px;
+  display: inline;
 }
