--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -67,6 +67,10 @@ $blue: #3897f0;
   outline: none;
 }
 
+.post-action-button:active {
+  opacity: 0.75;
+}
+
 .post-like-button {
   margin-left: -3px;
 }
