Add variable to comment form id name to make comment button on post list item correspond to specific comment form

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -104,6 +104,10 @@ $blue: #3897f0;
   margin-left: 4px;
 }
 
+.timestamp-content {
+  padding-bottom: 8px;
+}
+
 .post-timestamp {
   font-size: 10px;
   font-weight: 400;
@@ -125,7 +129,6 @@ $blue: #3897f0;
 }
 
 .new-comment-form-input-container {
-  margin-top: 8px;
   border-top: 1px solid $light-gray-1;
   max-height: 80px;
   width: 100%;
