--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script type="text/javascript">
       window.cloudinary_options = {
-        cloud_name: '<%= ENV['CLOUD_NAME'] %>',
-        upload_preset: '<%= ENV['UPLOAD_PRESET'] %>'
+        // Figure out how to hide keys on application.yml.
+        cloud_name: 'instagraph',
+        upload_preset: 'instagraph',
       };
     </script>
   </head>
