Remove unused container for post actions

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -48,6 +48,8 @@ $blue: #3897f0;
   font-size: 15px;
   margin-right: 5px;
   display: inline;
+  text-decoration: none;
+  color: $black;
 }
 
 .post-photo {
