--- a/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/user-profile-view/profile-view-styles.scss
@@ -24,16 +24,24 @@ $blue: #3897f0;
 // Header ==================================================
 .main-profile-user-header {
   display: flex;
+  max-width: 750px;
+  justify-content: space-between;
   padding-bottom: 45px;
 }
 
 .main-profile-header-user-picture {
-  border-radius: 75px;
-  margin-right: 30px;
+  border-radius: 80px;
+}
+
+.main-profile-user-header-picture-container {
+  display: flex;
+  width: 320px;
+  justify-content: center;
 }
 
 .main-profile-user-header-contents {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .header-row {
@@ -56,7 +64,8 @@ $blue: #3897f0;
   width: 105px;
 }
 
-.profile-unfollow-follow-button {
+.profile-unfollow-button {
+  width: 105px;
   background-color: $off-white;
   border-color: $light-gray-3;
   color: $black1;
@@ -87,10 +96,6 @@ $blue: #3897f0;
 }
 
 // Body ==================================================
-.posts-grid-body {
-
-}
-
 .posts-grid-view {
   width: 933px;
   display: grid;
