Add bio column to users and index other tables by ids

--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -33,6 +33,7 @@ $blue: #3897f0;
   padding: 16px;
   border-bottom: 1px solid $light-gray-1;
   -webkit-box-sizing: border-box;
+  text-decoration: none;
 }
 
 .post-list-item-user-thumb {
