--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -33,6 +33,11 @@ $blue: #3897f0;
   padding: 16px;
   border-bottom: 1px solid $light-gray-1;
   -webkit-box-sizing: border-box;
+}
+
+.post-author-header-items {
+  display: flex;
+  align-items: center;
   text-decoration: none;
 }
 
