--- a/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
+++ b/app/assets/stylesheets/logged_in_views/post_view_styles/post-view-styles.scss
@@ -181,3 +181,24 @@ $blue: #3897f0;
   background-color: transparent;
   max-height: 80px;
 }
+
+// Post Show View
+.post-show-container {
+  position: fixed;
+  display: flex;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.post-show-content {
+  width: 935px;
+  height: 520px;
+  background: white;
+  z-index: 100;
+}
